# parsertest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Prime_Assignment.cpp  README.md  Two  cmake_install.cmake  parser.c  two.cpp
.github/: autograding.json
.github/classroom/: autograding.json
.github/workflow/: autograde.yml
.github/workflows/: autograde.yml
.github/workflows/ISSUE_TEMPLATE/: failure.md  success.md
test/: Prime_Assignment.cpp  two_test.cpp
